เพิ่มปฎิทินนัดหมาย

--- a/psychologist/Homepage.html
+++ b/psychologist/Homepage.html
@@ -164,7 +164,7 @@
       ❗ แจ้งเคสเร่งด่วน: นิสิตแจ้งปัญหาอารมณ์รุนแรงผ่านแบบฟอร์ม
     </div>
 
-    <!-- <h2>🗓️ ปฏิทินนัดหมาย</h2>
+    <h2>🗓️ ปฏิทินนัดหมาย</h2>
     <div id="calendar"></div>
   </div>
 
@@ -188,6 +188,6 @@
       });
       calendar.render();
     });
-  </script> -->
+  </script>
 </body>
 </html>
