--- a/psychologist/student-info.html
+++ b/psychologist/student-info.html
@@ -14,7 +14,7 @@
       background-color: #f4f7fc;
     }
     header {
-      background-color: #2c3e50;
+      background-color: #4682B4;
       color: white;
       padding: 1rem;
       display: flex;
@@ -23,7 +23,7 @@
     }
     .sidebar {
       width: 220px;
-      background-color: #34495e;
+      background-color: #4682B4;
       color: white;
       height: 100vh;
       position: fixed;
@@ -40,7 +40,7 @@
       cursor: pointer;
     }
     .sidebar li:hover {
-      background-color: #3d566e;
+      background-color: #FF69B4;
     }
     .main {
       margin-left: 240px;
