--- a/psychologist/Homepage.html
+++ b/psychologist/Homepage.html
@@ -22,7 +22,7 @@
       align-items: center;
     }
     .sidebar {
-      width: 220px;
+      width: 230px;
       background-color: #4682B4;
       color: white;
       height: 100vh;
@@ -111,7 +111,7 @@
 
   <div class="sidebar">
     <ul>
-      <li><a href="#">📊 หน้าแรก</a></li>
+      <li><a href="Homepage.html">📊 หน้าแรก</a></li>
       <li><a href="student-info.html">📅 นัดหมายของฉัน</a></li>
       <!-- <li>👩‍🎓 รายชื่อนักศึกษา</li> -->
       <!-- <li>📝 บันทึกคำปรึกษา</li> -->
