--- a/user/News.html
+++ b/user/News.html
@@ -465,7 +465,7 @@
                         <p class="news-date">วันที่ 15 มิถุนายน 2567</p>
                         <h3>เวิร์คช็อป: การจัดการความเครียดในยุคดิจิทัล</h3>
                         <p>มาร่วมเรียนรู้เทคนิคและวิธีการรับมือกับความเครียดจากการเรียนและการใช้ชีวิตประจำวันในยุคที่เต็มไปด้วยสิ่งเร้า พร้อมคำแนะนำจากนักจิตวิทยาผู้เชี่ยวชาญ</p>
-                        <a href="#" class="read-more-btn">อ่านเพิ่มเติม</a>
+                        <a href="" class="read-more-btn">อ่านเพิ่มเติม</a>
                     </div>
                 </div>
 
