--- a/user/News.html
+++ b/user/News.html
@@ -465,7 +465,7 @@
                         <p class="news-date">วันที่ 15 มิถุนายน 2567</p>
                         <h3>เวิร์คช็อป: การจัดการความเครียดในยุคดิจิทัล</h3>
                         <p>มาร่วมเรียนรู้เทคนิคและวิธีการรับมือกับความเครียดจากการเรียนและการใช้ชีวิตประจำวันในยุคที่เต็มไปด้วยสิ่งเร้า พร้อมคำแนะนำจากนักจิตวิทยาผู้เชี่ยวชาญ</p>
-                        <a href="" class="read-more-btn">อ่านเพิ่มเติม</a>
+                        <a href="News-Detail.html" class="read-more-btn">อ่านเพิ่มเติม</a>
                     </div>
                 </div>
 
@@ -476,7 +476,7 @@
                         <p class="news-date">วันที่ 10 มิถุนายน 2567</p>
                         <h3>สัมมนา: พลังของจิตวิทยาเชิงบวก สร้างสุขให้ชีวิตนักศึกษา</h3>
                         <p>ค้นพบวิธีการสร้างพลังบวกและพัฒนาความคิดเชิงบวกเพื่อชีวิตที่มีความสุขและประสบความสำเร็จในรั้วมหาวิทยาลัย</p>
-                        <a href="#" class="read-more-btn">อ่านเพิ่มเติม</a>
+                        <a href="News-Detail.html" class="read-more-btn">อ่านเพิ่มเติม</a>
                     </div>
                 </div>
 
@@ -487,7 +487,7 @@
                         <p class="news-date">วันที่ 5 มิถุนายน 2567</p>
                         <h3>เปิดคลินิกสุขภาพใจเคลื่อนที่: ใกล้คุณยิ่งขึ้น!</h3>
                         <p>พบกับนักจิตวิทยาของเราได้ที่จุดบริการพิเศษตามตารางที่ประกาศ เพื่อรับคำปรึกษาเบื้องต้นได้ทันที ไม่ต้องรอคิว</p>
-                        <a href="#" class="read-more-btn">อ่านเพิ่มเติม</a>
+                        <a href="News-Detail.html" class="read-more-btn">อ่านเพิ่มเติม</a>
                     </div>
                 </div>
 
@@ -498,7 +498,7 @@
                         <p class="news-date">วันที่ 1 มิถุนายน 2567</p>
                         <h3>บทความน่าสนใจ: นอนหลับให้เต็มที่เพื่อสุขภาพจิตที่ดี</h3>
                         <p>การนอนหลับมีผลอย่างมากต่อสุขภาพจิต มาดูกันว่าคุณสามารถปรับปรุงคุณภาพการนอนได้อย่างไร</p>
-                        <a href="#" class="read-more-btn">อ่านเพิ่มเติม</a>
+                        <a href="News-Detail.html" class="read-more-btn">อ่านเพิ่มเติม</a>
                     </div>
                 </div>
 
@@ -509,7 +509,7 @@
                         <p class="news-date">วันที่ 28 พฤษภาคม 2567</p>
                         <h3>เปิดรับสมัคร: กลุ่มบำบัดสำหรับนักศึกษาใหม่</h3>
                         <p>สำหรับนักศึกษาชั้นปีที่ 1 ที่ต้องการปรับตัวและหาเพื่อนใหม่ในรั้วมหาวิทยาลัย</p>
-                        <a href="#" class="read-more-btn">อ่านเพิ่มเติม</a>
+                        <a href="News-Detail.html" class="read-more-btn">อ่านเพิ่มเติม</a>
                     </div>
                 </div>
 
