--- a/user/Psychologist.html
+++ b/user/Psychologist.html
@@ -600,7 +600,7 @@
             <div class="psychologist-grid">
                 <!-- Psychologist Card 1 -->
                 <div class="psychologist-card">
-                    <img src="https://cdn.discordapp.com/attachments/1072487445133803531/1354093902080249906/image.png?ex=68142878&is=6812d6f8&hm=4326e0e78ed1dd3cc056610562fb36652876380cd738d91db4d3254a79092ba5&" alt="Psychologist Somchai Jaidee" class="psychologist-avatar">
+                    <img src="https://mthai.com/app/uploads/2020/01/wLLo.jpg" alt="Psychologist Somchai Jaidee" class="psychologist-avatar">
                     <h3 class="psychologist-name">นายสมชาย ใจดี</h3>
                     <p class="psychologist-specialty">ผู้เชี่ยวชาญ: ความเครียดและการเรียน</p>
                     <p class="psychologist-bio">นายสมชายมีประสบการณ์ในการให้คำปรึกษาแก่นักศึกษาที่เผชิญกับความกดดันด้านการเรียนและการจัดการความเครียด</p>
@@ -609,7 +609,7 @@
 
                 <!-- Psychologist Card 2 -->
                 <div class="psychologist-card">
-                    <img src="https://cdn.discordapp.com/attachments/1072487445133803531/1354093987342061588/image.png?ex=6814288c&is=6812d70c&hm=b272b9cd7ecd3aa10b03f283638ae3c6c8048de67413cb9c3a79d1fb59ecb16b&" alt="Psychologist Maneerat Sukjai" class="psychologist-avatar">
+                    <img src="https://mthai.com/app/uploads/2020/01/wLLo.jpg" alt="Psychologist Maneerat Sukjai" class="psychologist-avatar">
                     <h3 class="psychologist-name">นางสาวมณีรัตน์ สุขใจ</h3>
                     <p class="psychologist-specialty">ผู้เชี่ยวชาญ: ความสัมพันธ์และอารมณ์</p>
                     <p class="psychologist-bio">นางสาวมณีรัตน์ช่วยให้นักศึกษาพัฒนาทักษะการสื่อสาร จัดการอารมณ์ และสร้างความสัมพันธ์ที่ดีกับผู้อื่น</p>
@@ -618,7 +618,7 @@
 
                 <!-- Psychologist Card 3 -->
                 <div class="psychologist-card">
-                    <img src="https://cdn.discordapp.com/attachments/1072487445133803531/1354094057793523720/image.png?ex=6814289d&is=6812d71d&hm=a34d2c8467172292b92bfbd8942cfdd22466819aba3b7be7cf4471115f850eb&" alt="Psychologist Oranong Raksa Jai" class="psychologist-avatar">
+                    <img src="https://mthai.com/app/uploads/2020/01/wLLo.jpg" alt="Psychologist Oranong Raksa Jai" class="psychologist-avatar">
                     <h3 class="psychologist-name">แพทย์หญิงอรอนงค์ รักษาใจ</h3>
                     <p class="psychologist-specialty">ผู้เชี่ยวชาญ: การพัฒนาตนเอง</p>
                     <p class="psychologist-bio">แพทย์หญิงอรอนงค์เน้นการเสริมสร้างความมั่นใจ ค้นหาศักยภาพ และวางแผนเพื่ออนาคตที่สดใส</p>
@@ -627,7 +627,7 @@
 
                 <!-- Psychologist Card 4 (Placeholder) -->
                 <div class="psychologist-card">
-                    <img src="https://placehold.co/150x150/87CEEB/ffffff?text=Dr.+Pim" alt="Psychologist Pimpapan Sooksa" class="psychologist-avatar">
+                    <img src="https://mthai.com/app/uploads/2020/01/wLLo.jpg" alt="Psychologist Pimpapan Sooksa" class="psychologist-avatar">
                     <h3 class="psychologist-name">แพทย์หญิงพิมพา สุขสันต์</h3>
                     <p class="psychologist-specialty">ผู้เชี่ยวชาญ: ภาวะซึมเศร้าและวิตกกังวล</p>
                     <p class="psychologist-bio">แพทย์หญิงพิมพาให้การสนับสนุนผู้ที่มีภาวะซึมเศร้าและวิตกกังวล เพื่อให้กลับมามีคุณภาพชีวิตที่ดีขึ้น</p>
@@ -636,7 +636,7 @@
 
                 <!-- Psychologist Card 5 (Placeholder) -->
                 <div class="psychologist-card">
-                    <img src="https://placehold.co/150x150/FF69B4/ffffff?text=Mr.+Dee" alt="Psychologist Deeprom Yimsoo" class="psychologist-avatar">
+                    <img src="https://mthai.com/app/uploads/2020/01/wLLo.jpg" alt="Psychologist Deeprom Yimsoo" class="psychologist-avatar">
                     <h3 class="psychologist-name">นายดีพร้อม ยิ้มสู้</h3>
                     <p class="psychologist-specialty">ผู้เชี่ยวชาญ: การปรับตัวและทักษะชีวิต</p>
                     <p class="psychologist-bio">นายดีพร้อมช่วยให้นักศึกษาปรับตัวเข้ากับสภาพแวดล้อมใหม่ๆ และพัฒนาทักษะชีวิตที่จำเป็น</p>
@@ -645,7 +645,7 @@
 
                 <!-- Psychologist Card 6 (Placeholder) -->
                 <div class="psychologist-card">
-                    <img src="https://placehold.co/150x150/4682B4/ffffff?text=Ms.+Chai" alt="Psychologist Chainan Meechai" class="psychologist-avatar">
+                    <img src="https://mthai.com/app/uploads/2020/01/wLLo.jpg" alt="Psychologist Chainan Meechai" class="psychologist-avatar">
                     <h3 class="psychologist-name">นางสาวชัยนันท์ มีชัย</h3>
                     <p class="psychologist-specialty">ผู้เชี่ยวชาญ: การเรียนรู้และอาชีพ</p>
                     <p class="psychologist-bio">นางสาวชัยนันท์ให้คำแนะนำด้านการเรียนรู้ การวางแผนอาชีพ และการค้นหาเส้นทางที่เหมาะสม</p>
