--- a/psychologist/Homepage.html
+++ b/psychologist/Homepage.html
@@ -278,7 +278,7 @@
         }
 
         .maincontent-img img {
-            max-width: 100%;
+            max-width: 80%; /* Adjusted to make the image smaller */
             height: auto;
             border-radius: 20px;
             box-shadow: 0 10px 40px rgba(0,0,0,0.3);
@@ -689,7 +689,7 @@
             <nav class="navbar">
                 <input type="search" class="search-input" placeholder="ค้นหา...">
                 <div class="user-dropdown" id="userDropdown">
-                    <img src="https://placehold.co/38x38/FFC0CB/4682B4?text=AD" alt="Avatar"> <!-- Placeholder image with AD text -->
+                    <img src="https://placehold.co/38x38/FFC0CB/4682B4?text=PS" alt="Avatar"> <!-- Placeholder image with PS text for Psychologist -->
                     <strong>นักจิตวิทยา</strong>
                     <ul class="user-dropdown-menu">
                         <li><a href="#">โปรไฟล์</a></li>
@@ -704,7 +704,7 @@
                     <div class="container">
                         <div class="maincontent-con">
                             <div class="maincontent-info">
-                                <h1>ยินดีต้อนรับ, ดร. สมหญิง ใจดี</h1>
+                                <h1>ยินดีต้อนรับ ดร. สมหญิง ใจดี</h1>
                                 <h2>แดชบอร์ดส่วนตัวของคุณ</h2>
                                 <p>จัดการการนัดหมาย ผู้ป่วย และเข้าถึงเครื่องมือสำคัญได้อย่างง่ายดาย เพื่อให้การดูแลสุขภาพใจเป็นไปอย่างมีประสิทธิภาพสูงสุด</p>
                                 <a href="appointments.html" class="maincontent-btn">ดูนัดหมายวันนี้</a>
