--- a/user/Chat.html
+++ b/user/Chat.html
@@ -343,6 +343,106 @@
             box-shadow: 0 4px 8px rgba(70, 130, 180, 0.4);
         }
 
+        /* Modal Styles */
+        .confirmation-modal {
+            display: none; /* Hidden by default */
+            position: fixed;
+            z-index: 1001; /* Higher than nav bar */
+            left: 0;
+            top: 0;
+            width: 100%;
+            height: 100%;
+            overflow: auto;
+            background-color: rgba(0,0,0,0.7); /* Dim background */
+            justify-content: center;
+            align-items: center;
+            padding: 20px;
+            box-sizing: border-box;
+        }
+
+        .confirmation-modal.show {
+            display: flex;
+        }
+
+        .modal-content {
+            background-color: var(--white);
+            margin: auto;
+            padding: 30px;
+            border-radius: 18px;
+            box-shadow: 0 10px 30px rgba(0,0,0,0.4);
+            max-width: 450px; /* Smaller for confirmation */
+            width: 100%;
+            animation: fadeInScale 0.3s ease-out;
+            position: relative;
+            text-align: center;
+        }
+
+        @keyframes fadeInScale {
+            from { opacity: 0; transform: scale(0.9); }
+            to { opacity: 1; transform: scale(1); }
+        }
+
+        .modal-header {
+            padding-bottom: 15px;
+            margin-bottom: 25px;
+            text-align: center;
+            border-bottom: 2px solid var(--border-light); /* Add border for separation */
+        }
+        .modal-header h3 {
+            margin: 0;
+            font-size: 1.8rem;
+            color: var(--deep-blue);
+            font-weight: 700;
+        }
+
+        .modal-body {
+            font-size: 1.1rem;
+            color: var(--text-dark);
+            line-height: 1.7;
+            margin-bottom: 25px;
+        }
+
+        .modal-footer {
+            display: flex;
+            justify-content: center;
+            gap: 20px;
+            padding-top: 20px;
+            border-top: 1px solid var(--border-light);
+        }
+
+        .modal-footer button {
+            padding: 12px 25px;
+            border-radius: 30px;
+            font-size: 1rem;
+            font-weight: 600;
+            cursor: pointer;
+            transition: background-color 0.3s ease, transform 0.2s ease, box-shadow 0.3s ease;
+            border: none;
+        }
+
+        .modal-footer .btn-confirm {
+            background-color: var(--primary-pink);
+            color: var(--white);
+            box-shadow: 0 4px 10px rgba(255, 105, 180, 0.3);
+        }
+        .modal-footer .btn-confirm:hover {
+            background-color: #e05e9b;
+            transform: translateY(-3px);
+            box-shadow: 0 6px 15px rgba(255, 105, 180, 0.4);
+        }
+
+        .modal-footer .btn-cancel {
+            background-color: var(--text-muted);
+            color: var(--white);
+            box-shadow: 0 4px 10px rgba(108, 117, 125, 0.3);
+        }
+        .modal-footer .btn-cancel:hover {
+            background-color: #5a6268;
+            transform: translateY(-3px);
+            box-shadow: 0 6px 15px rgba(108, 117, 125, 0.4);
+        }
+
+
         /* Responsive Adjustments */
         @media (max-width: 992px) {
             .nav-con {
@@ -423,6 +523,24 @@
                 padding: 10px 18px;
                 font-size: 0.95rem;
             }
+
+            .modal-content {
+                max-width: 90%;
+                padding: 25px;
+            }
+            .modal-header h3 {
+                font-size: 1.6rem;
+            }
+            .modal-body {
+                font-size: 1rem;
+            }
+            .modal-footer {
+                flex-direction: column; /* Stack buttons vertically in modal footer */
+                gap: 10px;
+            }
+            .modal-footer button {
+                width: 100%; /* Full width for stacked buttons */
+            }
         }
 
         @media (max-width: 768px) {
@@ -457,6 +575,20 @@
             }
             .chat-input button {
                 padding: 8px 15px;
+                font-size: 0.9rem;
+            }
+
+            .modal-content {
+                padding: 20px;
+            }
+            .modal-header h3 {
+                font-size: 1.4rem;
+            }
+            .modal-body {
+                font-size: 0.9rem;
+            }
+            .modal-footer button {
+                padding: 10px 18px;
                 font-size: 0.9rem;
             }
         }
@@ -497,6 +629,20 @@
                 padding: 6px 12px;
                 font-size: 0.85rem;
             }
+
+            .modal-content {
+                padding: 15px;
+            }
+            .modal-header h3 {
+                font-size: 1.2rem;
+            }
+            .modal-body {
+                font-size: 0.85rem;
+            }
+            .modal-footer button {
+                padding: 8px 15px;
+                font-size: 0.85rem;
+            }
         }
     </style>
 </head>
@@ -526,6 +672,10 @@
             const sendMessageButton = document.getElementById('sendMessageButton');
             const chatPsychologistName = document.getElementById('chatPsychologistName');
             const endConsultationButton = document.getElementById('endConsultationButton'); // ปุ่มเสร็จสิ้นการปรึกษา
+            const confirmationModal = document.getElementById('confirmationModal'); // Modal ยืนยัน
+            const btnConfirmEndConsultation = document.getElementById('btnConfirmEndConsultation'); // ปุ่มยืนยันใน Modal
+            const btnCancelEndConsultation = document.getElementById('btnCancelEndConsultation'); // ปุ่มยกเลิกใน Modal
+
 
             // Psychologist data to map ID to full name
             const psychologists = {
@@ -540,7 +690,7 @@
             // Get psychologist ID and appointment ID from URL parameters
             const urlParams = new URLSearchParams(window.location.search);
             const psychologistId = urlParams.get('psy');
-            const appointmentId = urlParams.get('appId'); // You can use this to load specific chat history
+            const appointmentId = urlParams.get('appId'); 
 
             let currentPsychologistName = 'นักจิตวิทยา'; // Default name
             if (psychologistId && psychologists[psychologistId]) {
@@ -583,13 +733,59 @@
                 }
             });
 
-            // Event listener for "เสร็จสิ้นการปรึกษา" button
+            // Event listener for "เสร็จสิ้นการปรึกษา" button - Show confirmation modal
             if (endConsultationButton) {
                 endConsultationButton.addEventListener('click', function() {
+                    confirmationModal.classList.add('show'); // Show the confirmation modal
+                });
+            }
+
+            // Event listener for "ยืนยัน" button in the modal
+            if (btnConfirmEndConsultation) {
+                btnConfirmEndConsultation.addEventListener('click', function() {
+                    confirmationModal.classList.remove('show'); // Hide the modal
+
+                    // Logic to update appointment status in localStorage
+                    let allAppointments = [];
+                    const storedAppointments = localStorage.getItem('allAppointments');
+                    if (storedAppointments) {
+                        try {
+                            allAppointments = JSON.parse(storedAppointments);
+                        } catch (e) {
+                            console.error("Error parsing existing appointments:", e);
+                        }
+                    }
+
+                    // Find and update the specific appointment
+                    const updatedAppointments = allAppointments.map(app => {
+                        if (app.id === appointmentId) { // Match by ID
+                            return { ...app, status: 'ปรึกษาสำเร็จ' }; // Update status
+                        }
+                        return app;
+                    });
+
+                    localStorage.setItem('allAppointments', JSON.stringify(updatedAppointments)); // Save updated array
+
+                    console.log(`Appointment ${appointmentId} status updated to 'ปรึกษาสำเร็จ'`);
+                    
                     // Navigate to the appointments history page
                     window.location.href = 'appointments.html'; 
                 });
             }
+
+            // Event listener for "ยกเลิก" button in the modal
+            if (btnCancelEndConsultation) {
+                btnCancelEndConsultation.addEventListener('click', function() {
+                    confirmationModal.classList.remove('show'); // Hide the modal
+                });
+            }
+
+            // Close modal if user clicks outside
+            confirmationModal.addEventListener('click', function(e) {
+                if (e.target === confirmationModal) {
+                    confirmationModal.classList.remove('show');
+                }
+            });
         });
     </script>
 
@@ -638,5 +834,21 @@
             </div>
         </div>
     </main>
+
+    <!-- Confirmation Modal for Ending Consultation -->
+    <div id="confirmationModal" class="confirmation-modal">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h3>สิ้นสุดการปรึกษา?</h3>
+            </div>
+            <div class="modal-body">
+                <p>คุณแน่ใจหรือไม่ว่าต้องการสิ้นสุดการปรึกษาครั้งนี้?</p>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn-cancel" id="btnCancelEndConsultation">ยกเลิก</button>
+                <button type="button" class="btn-confirm" id="btnConfirmEndConsultation">ยืนยัน</button>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
