--- a/user/appointments.html
+++ b/user/appointments.html
@@ -400,7 +400,7 @@
                         <div class="dropdown-toggle">ข้อมูลการนัดหมาย <span class="arrow">▼</span></div>
                         <ul class="dropdown-menu">
                             <li><a href="Viewinfo.html">ข้อมูลการนัดหมาย</a></li>
-                            <li><a href="appointments.html">ประวัติการนัดหมาย</a></li>
+                            <li><a href="appointment.html">ประวัติการนัดหมาย</a></li>
                         </ul>
                     </li>
                 </ul>
